--- a/_theme_files/add-job.html
+++ b/_theme_files/add-job.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -10,8 +13,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="css/styles.css"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/favicon.ico"
+    />
     <title>Vue Jobs | Become a Vue Developer</title>
   </head>
   <body>
@@ -22,8 +32,15 @@
             class="flex flex-1 items-center justify-center md:items-stretch md:justify-start"
           >
             <!-- Logo -->
-            <a class="flex flex-shrink-0 items-center mr-4" href="index.html">
-              <img class="h-10 w-auto" src="images/logo.png" alt="Vue Jobs" />
+            <a
+              class="flex flex-shrink-0 items-center mr-4"
+              href="index.html"
+            >
+              <img
+                class="h-10 w-auto"
+                src="images/logo.png"
+                alt="Vue Jobs"
+              />
               <span class="hidden md:block text-white text-2xl font-bold ml-2"
                 >Vue Jobs</span
               >
@@ -61,7 +78,9 @@
             <h2 class="text-3xl text-center font-semibold mb-6">Add Job</h2>
 
             <div class="mb-4">
-              <label for="type" class="block text-gray-700 font-bold mb-2"
+              <label
+                for="type"
+                class="block text-gray-700 font-bold mb-2"
                 >Job Type</label
               >
               <select
@@ -106,7 +125,9 @@
             </div>
 
             <div class="mb-4">
-              <label for="type" class="block text-gray-700 font-bold mb-2"
+              <label
+                for="type"
+                class="block text-gray-700 font-bold mb-2"
                 >Salary</label
               >
               <select
@@ -146,7 +167,9 @@
             <h3 class="text-2xl mb-5">Company Info</h3>
 
             <div class="mb-4">
-              <label for="company" class="block text-gray-700 font-bold mb-2"
+              <label
+                for="company"
+                class="block text-gray-700 font-bold mb-2"
                 >Company Name</label
               >
               <input
